# algo_benchmark

./: CMakeLists.txt  README.md
data/i7-10750H/: data.json
data/i9-9900K/: data.json  perf_stat_all_128.txt
scripts/: perf_stat_benchmark.py  plot_benchmark.py
src/: CMakeLists.txt  sorting_algos.hpp
src/benchmark/: CMakeLists.txt  sorting_algos_benchmark.cpp
src/test/: CMakeLists.txt  sorting_algos_test.cpp
